Issue #3062389 by josephleon, colan: Fixed log message spillage.

--- a/style.css
+++ b/style.css
@@ -965,6 +965,8 @@ table.hosting-table td {
   padding:4px 5px 5px;
   border-top:1px solid #fff;
   position:relative;
+  max-width: 440px;
+  word-wrap: break-word;
   }
 
 .modalframe .ui-dialog-titlebar,
